# apps/catalog/src/integrationTest/resources/openapi/catalog.json
@@ -283,7 +283,16 @@
             "format" : "int64",
             "type" : "integer"
           },
+          "bundleProductCodes" : {
+            "items" : {
+              "type" : "string"
+            },
+            "type" : "array"
+          },
           "currency" : {
+            "type" : "string"
+          },
+          "editionName" : {
             "type" : "string"
           },
           "gameId" : {
@@ -297,6 +306,9 @@
           "name" : {
             "type" : "string"
           },
+          "parentProductCode" : {
+            "type" : "string"
+          },
           "price" : {
             "format" : "int64",
             "type" : "integer"
@@ -307,6 +319,9 @@
           "productId" : {
             "format" : "int64",
             "type" : "integer"
+          },
+          "productKind" : {
+            "type" : "string"
           },
           "ratingCode" : {
             "type" : "string"
